--- a/2018-04-25-MediaCarousel - Copy/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-04-25-MediaCarousel - Copy/SQL_MediaCarouselWithFrames_1_M.html
@@ -351,14 +351,14 @@
 							<img alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next" role="presentation" />
 						</button>
 					</div>
-					<div class="c-sequence-indicator" role="tablist" aria-live="assertive" aria-hidden="false">
-						<button role="tab" aria-label="Jump to slide 1 of 7 - {{1:carousel_headline}}" aria-controls="MediaSlideOne" data-show="{{1:show}}"></button>
-						<button role="tab" aria-label="Jump to slide 2 of 7 - {{2:carousel_headline}}" aria-controls="MediaSlideTwo" data-show="{{2:show}}"></button>
-						<button role="tab" aria-label="Jump to slide 3 of 7 - {{3:carousel_headline}}" aria-controls="MediaSlideThree" data-show="{{3:show}}"></button>
-						<button role="tab" aria-label="Jump to slide 4 of 7 - {{4:carousel_headline}}" aria-controls="MediaSlideFour" data-show="{{4:show}}"></button>
-						<button role="tab" aria-label="Jump to slide 5 of 7 - {{5:carousel_headline}}" aria-controls="MediaSlideFive" data-show="{{5:show}}"></button>
-						<button role="tab" aria-label="Jump to slide 6 of 7 - {{6:carousel_headline}}" aria-controls="MediaSlideSix" data-show="{{6:show}}"></button>
-						<button role="tab" aria-label="Jump to slide 7 of 7 - {{7:carousel_headline}}" aria-controls="MediaSlideSeven" data-show="{{7:show}}"></button>
+					<div class="c-sequence-indicator" role="buttongroup" aria-live="assertive" aria-hidden="false">
+						<button role="button" aria-label="Jump to slide 1 of 7 - {{1:carousel_headline}}" aria-controls="MediaSlideOne" data-show="{{1:show}}"></button>
+						<button role="button" aria-label="Jump to slide 2 of 7 - {{2:carousel_headline}}" aria-controls="MediaSlideTwo" data-show="{{2:show}}"></button>
+						<button role="button" aria-label="Jump to slide 3 of 7 - {{3:carousel_headline}}" aria-controls="MediaSlideThree" data-show="{{3:show}}"></button>
+						<button role="button" aria-label="Jump to slide 4 of 7 - {{4:carousel_headline}}" aria-controls="MediaSlideFour" data-show="{{4:show}}"></button>
+						<button role="button" aria-label="Jump to slide 5 of 7 - {{5:carousel_headline}}" aria-controls="MediaSlideFive" data-show="{{5:show}}"></button>
+						<button role="button" aria-label="Jump to slide 6 of 7 - {{6:carousel_headline}}" aria-controls="MediaSlideSix" data-show="{{6:show}}"></button>
+						<button role="button" aria-label="Jump to slide 7 of 7 - {{7:carousel_headline}}" aria-controls="MediaSlideSeven" data-show="{{7:show}}"></button>
 					</div>
 
 				</div>
