test change - V1 Release is up to date and moving to V2 release

--- a/2018-05-10_MediaCarousel_AccessibilityV2/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-05-10_MediaCarousel_AccessibilityV2/SQL_MediaCarouselWithFrames_1_M.html
@@ -337,11 +337,13 @@
 						</div>
 					</div>
 					<div class="carousel-navigation">
-						<button tabindex="0" aria-label="view previous slide" class="carousel-button carousel-prev" data-desktop-class="carousel-button carousel-prev">
-							<img alt="{{carousel_prev_alt}}" src="{{carousel_prev}}" title="previous" />
+						<button tabindex="0" aria-hidden="true" aria-label="view previous slide" class="carousel-button carousel-prev" data-desktop-class="carousel-button carousel-prev"
+						    role="presentation">
+							<img alt="{{carousel_prev_alt}}" src="{{carousel_prev}}" title="previous" role="presentation" />
 						</button>
-						<button tabindex="0" aria-label="view next slide" class="carousel-button carousel-next" data-desktop-class="carousel-button carousel-next">
-							<img alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next" />
+						<button tabindex="0" aria-hidden="true" aria-label="view next slide" class="carousel-button carousel-next" data-desktop-class="carousel-button carousel-next"
+						    role="presentation">
+							<img alt="{{carousel_next_alt}}" src="{{carousel_next}}" title="next" role="presentation" />
 						</button>
 					</div>
 					<div class="c-sequence-indicator" role="tablist" aria-live="assertive" aria-hidden="false">
