--- a/2018-05-10_MediaCarousel_AccessibilityV2/SQL_MediaCarouselWithFrames_1_M.html
+++ b/2018-05-10_MediaCarousel_AccessibilityV2/SQL_MediaCarouselWithFrames_1_M.html
@@ -34,7 +34,7 @@
 									 htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}','data-video-url':'{{1-data-video-url}}','ms.ea_action':'{{1-ms.ea-action}}','ms.ea_offer':'{{1-ms.ea-offer}}','atlas':'{{1:atlas}}','aria-hidden':'true', 'role':'presentation'}">{{1-text-forbutton}}</mscom:link>
 								</div>
 								<div class="video-link relative {{1-playicon-color}}">
-									<mscom:link href="JavaScript:void(0)" id="{{1-video-id}}" classoverride="{{1:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}', 'data-video-url':'{{1-data-video-url}}','WCS.CN':'{{1-WCS.CN}}','aria-hidden':'true','aria-label':'{{1:aria-tag}}'}"></mscom:link>
+									<mscom:link href="JavaScript:void(0)" id="{{1-video-id}}" classoverride="{{1:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}', 'data-video-url':'{{1-data-video-url}}','WCS.CN':'{{1-WCS.CN}}','aria-hidden':'false','aria-label':'{{1:aria-tag}}'}"></mscom:link>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{1:carousel_image-Min-1779px}}' media='(min-width:1779px)'></source>
 										<source class='hide-by-default show-element' srcset='{{1:carousel_image-Min-1400px}}' media='(min-width:1400px)'></source>
@@ -42,8 +42,7 @@
 										<source class='hide-by-default show-element' srcset='{{1:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{1:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{1:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{1:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{1:carousel_image}}"
-										 alt="{{1:carousel_image_alt}}" src="{{1:carousel_image}}">
+										<img srcset='{{1:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{1:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{1:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -53,7 +52,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
@@ -82,8 +81,7 @@
 										<source class='hide-by-default show-element' srcset='{{2:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{2:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{2:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{2:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{2:carousel_image}}"
-										 alt="{{2:carousel_image_alt}}" src="{{2:carousel_image}}">
+										<img srcset='{{2:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{2:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{2:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -93,7 +91,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
@@ -121,8 +119,7 @@
 										<source class='hide-by-default show-element' srcset='{{3:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{3:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{3:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{3:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{3:carousel_image}}"
-										 alt="{{3:carousel_image_alt}}" src="{{3:carousel_image}}">
+										<img srcset='{{3:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{3:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{3:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -132,7 +129,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
@@ -160,8 +157,7 @@
 										<source class='hide-by-default show-element' srcset='{{4:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{4:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{4:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{4:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{4:carousel_image}}"
-										 alt="{{4:carousel_image_alt}}" src="{{4:carousel_image}}">
+										<img srcset='{{4:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{4:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{4:carousel_image}} ">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -171,7 +167,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
@@ -199,8 +195,7 @@
 										<source class='hide-by-default show-element' srcset='{{5:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{5:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{5:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{5:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{5:carousel_image}}"
-										 alt="{{5:carousel_image_alt}}" src="{{5:carousel_image}}">
+										<img srcset='{{5:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{5:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{5:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -210,7 +205,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
@@ -238,8 +233,7 @@
 										<source class='hide-by-default show-element' srcset='{{6:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{6:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{6:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{6:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{6:carousel_image}}"
-										 alt="{{6:carousel_image_alt}}" src="{{6:carousel_image}}">
+										<img srcset='{{6:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{6:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{6:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -249,7 +243,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
@@ -277,8 +271,7 @@
 										<source class='hide-by-default show-element' srcset='{{7:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{7:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{7:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{7:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{7:carousel_image}}"
-										 alt="{{7:carousel_image_alt}}" src="{{7:carousel_image}}">
+										<img srcset='{{7:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{7:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{7:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -316,8 +309,7 @@
 										<source class='hide-by-default show-element' srcset='{{8:carousel_image-Min-768px}}' media='(min-width:768px)'></source>
 										<source class='hide-by-default show-element' srcset='{{8:carousel_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{8:carousel_image}}' media='(min-width:0)'></source>
-										<img srcset='{{8:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{8:carousel_image}}"
-										 alt="{{8:carousel_image_alt}}" src="{{8:carousel_image}}">
+										<img srcset='{{8:carousel_image}}' class="carousel-image" data-desktop-class="carousel-image" md:payloadguid="{{8:carousel_image}}" role="presentation" aria-hidden="true" alt="" src="{{8:carousel_image}}">
 									</picture>
 									<picture>
 										<source class='hide-by-default show-element' srcset='{{play_button_image-Min-1779px}}' media='(min-width:1779px)'></source>
@@ -327,7 +319,7 @@
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:540px)'></source>
 										<source class='hide-by-default show-element' srcset='{{play_button_image}}' media='(min-width:0)'></source>
 										<img srcset='{{play_button_image}}' role="presentation" aria-hidden="true" class="play-button" data-desktop-class="play-button" md:payloadguid="{{play_button_image}}"
-										 alt="{{play_button_image_alt}}" src="{{play_button_image}}">
+										 alt="" src="{{play_button_image}}">
 									</picture>
 								</div>
 							</div>
