--- a/2018-05-18-Dyn365-VideoComp-Accessibility/relationship-sales-demo.html
+++ b/2018-05-18-Dyn365-VideoComp-Accessibility/relationship-sales-demo.html
@@ -1,18 +1,10 @@
 <style>
-    /*ul.video-ul li:first-child img{
-            position: absolute;
-            top:0;
-            left:0;
-            width:100%;
-  
-      }
-      */
-
     /*accessebility-fixes*/
 
-    .d365-3column-form-h2 {
+    #d365-chat-section-h2 {
         display: none;
     }
+
 
     @media screen and (-ms-high-contrast: white-on-black) {
         .d365-sem-wrapper .m-multi-feature.f-align-left .video-container .thumbnail-ul-holder .video-thumbnail-ul li.active-border a {
@@ -35,14 +27,6 @@
 
 
     }
-
-    @-moz-document url-prefix() {
-        .icon-container img {
-            background: #FFF;
-        }
-
-    }
-
     /*accessebility-fixes-ends*/
 
     .d365-sem-wrapper .video-container div.clearfloat {
@@ -537,13 +521,13 @@
         padding-right: 1% !important;
     }
 
+    #ret-footnote {
+        text-decoration: none;
+    }
+
     .d365-sem-wrapper ul.video-dynamic-info a.c-call-to-action:focus {
         background-color: #BDBCBD !important;
         text-decoration: underline !important;
-    }
-
-    .d365-sem-wrapper ul.video-thumbnail-ul a[role="tab"]:focus {
-        /*outline: #000 dashed 1px !important;*/
     }
 
     .d365-sem-wrapper .context-3col-chat .m-content-placement-item .c-call-to-action {
@@ -722,11 +706,7 @@
         .d365-sem-wrapper .d365-3column-form {
             top: 0;
         }
-        .d365-sem-wrapper .m-content-placement .flex-banner {
-            /*display: flex;
-                  display: ms-flex;
-                  display: flexbox;*/
-        }
+
         .d365-sem-wrapper .m-multi-feature.f-align-left section div ul.video-dynamic-info li h3.c-heading {
             letter-spacing: -0.5px;
         }
@@ -878,9 +858,7 @@
         .d365-sem-wrapper .d365-3column-form {
             height: 0;
         }
-        .custom-d365-c-show {
-            /*margin-top: -11%;*/
-        }
+
         .d365-sem-wrapper .m-multi-feature.f-align-left section div ul.video-dynamic-info li {
             margin-top: 0 !important;
         }
@@ -905,7 +883,7 @@
             display: block;
         }
         .d365-sem-wrapper .video-container .video-lander-div {
-            margin-top: 110px;
+            margin-top: 136px;
         }
         .d365-sem-wrapper .thumbnail-ul-holder .thumbnail-header {
             text-align: center;
@@ -1045,7 +1023,7 @@
 
     @media only screen and (max-width: 380px) {
         .d365-sem-wrapper .video-container .video-lander-div {
-            margin-top: 136px;
+            margin-top: 176px;
         }
     }
 
@@ -1170,9 +1148,7 @@
             text-align: center;
             color: #000000;
         }
-        hr.mob-custom-divider {
-            /*margin-top: 15%;*/
-        }
+
         .video-dynamic-info .f-active .text-block .text-container .c-paragraph {
             min-height: 90px;
             max-height: 100px;
@@ -1463,15 +1439,6 @@
         display: inline-block;
     }
 
-    /* Able to see the iframe focus state */
-
-    #newHorizontalItemImage1:focus,
-    #newHorizontalItemImage2:focus,
-    #newHorizontalItemImage3:focus,
-    #newHorizontalItemImage4:focus,
-    #newHorizontalItemImage5:focus,
-        {
-        border: 2px dotted black !important;
 </style>
 
 <div class="d365-sem-wrapper" data-grid="container">
@@ -1507,8 +1474,8 @@
                     <ul class="video-ul">
                         <li id="newHorizontalItemImage1" data-f-theme="light" class="f-active" role="tabpanel" video-id="RE1W5Dk">
 
-                            <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1W5Dk?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe" aria-hidden="true" id="custom_oneplayer_iframe_1" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
-                                title="Watch the Grow your business faster with Microsoft Relationship Sales video"></iframe>
+                            <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1W5Dk?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe" id="custom_oneplayer_iframe_1" allowfullscreen="true" frameborder="0" scrolling="no"
+                                style="width: 100%; height: 100%;" title="Watch the Grow your business faster with Microsoft Relationship Sales video"></iframe>
                             <!--<img src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whud?ver=93df" class="mscom-image dyn-img x-hidden-focus" alt="Build-relationship" width="35" height="34">-->
                             <div class="videocontainer-desc">
                                 <h2 class="c-heading-5 heading-uppercase">Grow Your Business Faster</h2>
@@ -1679,10 +1646,7 @@
                             <li class="text-container">
                                 <h3 class="c-heading heading-uppercase">Gartner report</h3>
                                 <mscom:image classoverride="dyn-img" payloadguid="5109f07f-ef34-41b9-9a88-c5672b8de700" alt="Report"></mscom:image>
-                                <p class="c-paragraph">Learn why Gartner positions Microsoft as a leader in sales force automation.
-                                    <sup>
-                                        <a href="#footnote" title="Jump to footnote">*</a>
-                                    </sup>
+                                <p class="c-paragraph">Learn why Gartner positions Microsoft as a leader in sales force automation.<a href="#footnote" title="Jump to footnote" id="ret-footnote">*</a>
                                 </p>
                                 <a href="https://info.microsoft.com/dynamics365-gartner-magic-quadrant.html?lcid=en-us" target="_blank" class="c-call-to-action c-glyph"
                                     aria-label="Learn why Gartner positions Microsoft as a leader">
@@ -1765,9 +1729,9 @@
         <!--<hr class="c-divider custom-divider">-->
     </div>
 
-    <div data-grid="container" class="d365-3column-form" id="d365_3column_form" style="height:0px;" aria-labelledby="d365-3column-form-h2"
+    <div data-grid="container" class="d365-3column-form" id="d365_3column_form" style="height:0px;" aria-labelledby="d365-chat-section-h2"
         aria-label="chat-section" role="region">
-        <h2 class="d365-3column-form-h2"></h2>
+        <h2 id="d365-chat-section-h2">chat section hidden header</h2>
         <div class="context-3col-chat m-content-placement d365-c-show custom-d365-c-show" data-grid="col-12">
             <div class="custom-hr-divider"></div>
             <div data-grid="col-12 stack-2" class="flex-banner">
@@ -1841,7 +1805,11 @@
 <div class="foot-note-div theme-light">
     <section data-grid="container" class="footnote-container">
         <p id="footnote" class="c-paragraph-4 italic-foot-note">
-            *Gartner does not endorse any vendor, product or service depicted in its research publications, and does not advise technology
+            <a href="#ret-footnote" class="supLink anchor_underline" aria-label="Return to referrer Footnote">
+                <span class="supFn">*</span>
+            </a>
+
+            Gartner does not endorse any vendor, product or service depicted in its research publications, and does not advise technology
             users to select only those vendors with the highest ratings or other designation. Gartner research publications
             consist of the opinions of Gartner's research organization and should not be construed as statements of fact.
             Gartner disclaims all warranties, expressed or implied, with respect to this research, including any warranties
