font change for media query plus what ever offshore chnanged

--- a/Dyn365-MobileAccessibility/dynamics365--relationship-sales-demo.html
+++ b/Dyn365-MobileAccessibility/dynamics365--relationship-sales-demo.html
@@ -564,6 +564,7 @@
         }
     }
 
+
     /*Latest code for tablet*/
 
     @media only screen and (max-width: 767px) {
@@ -879,6 +880,9 @@
         .d365-sem-wrapper .video-container div.clearfloat {
             display: block;
         }
+        .d365-sem-wrapper .videocontainer-desc {
+            height: 114px;
+        }
         .d365-sem-wrapper .video-container .video-lander-div {
             /*margin-top: 136px;*/
             margin-top: 113px !important;
@@ -1023,6 +1027,12 @@
         }
         .d365-sem-wrapper .m-multi-feature ul.video-thumbnail-ul li a img {
             width: 100%;
+        }
+    }
+
+    @media only screen and (min-width: 540px) and (max-width: 584px) { 
+        .video-dynamic-info a.c-call-to-action {
+            font-size: 13px; 
         }
     }
 
