--- a/Dyn365-MobileAccessibility/dynamics365--relationship-sales-demo.html
+++ b/Dyn365-MobileAccessibility/dynamics365--relationship-sales-demo.html
@@ -1,4 +1,17 @@
 <style>
+    /*w3c validator starts*/
+
+    .custom-oneplayer-iframe {
+        border: none;
+        overflow: hidden;
+    }
+
+    .section-header {
+        display: none;
+    }
+
+    /*w3c validator ends*/
+
     /*accessebility-fixes*/
 
     #d365-chat-section-h2 {
@@ -135,7 +148,7 @@
         height: 0;
         border-left: 10px solid transparent;
         border-right: 10px solid transparent;
-        border-bottom: 10px solid off;
+        border-bottom: 10px solid transparent;
         position: absolute;
         top: -10px;
         left: 44%;
@@ -149,7 +162,7 @@
     .m-multi-feature .video-container {
         width: 95% !important;
         margin: 0 auto;
-        align-items: normal !important;
+
         flex-wrap: wrap;
     }
 
@@ -171,9 +184,7 @@
     }
 
     .m-multi-feature.f-align-left>section,
-    .m-multi-feature.f-align-right>section {
-        align-items: normal !important;
-    }
+    .m-multi-feature.f-align-right>section {}
 
     .thumbnail-ul-holder .video-thumbnail-ul li a.c-logo {
         display: inline-block
@@ -564,7 +575,6 @@
         }
     }
 
-
     /*Latest code for tablet*/
 
     @media only screen and (max-width: 767px) {
@@ -822,9 +832,9 @@
             top: 0;
         }
         .d365-sem-wrapper .m-content-placement .flex-banner {
-            display: flex;
+            /*display: flex;
             display: ms-flex;
-            display: flexbox;
+            display: flexbox;*/
         }
         .d365-sem-wrapper .m-multi-feature.f-align-left section div ul.video-dynamic-info li.explore-header .hr-h1-explore {
             padding: 0 !important;
@@ -879,9 +889,6 @@
     @media only screen and (max-width: 539px) {
         .d365-sem-wrapper .video-container div.clearfloat {
             display: block;
-        }
-        .d365-sem-wrapper .videocontainer-desc {
-            height: 114px;
         }
         .d365-sem-wrapper .video-container .video-lander-div {
             /*margin-top: 136px;*/
@@ -1030,9 +1037,9 @@
         }
     }
 
-    @media only screen and (min-width: 540px) and (max-width: 584px) { 
+    @media only screen and (min-width: 540px) and (max-width: 584px) {
         .video-dynamic-info a.c-call-to-action {
-            font-size: 13px; 
+            font-size: 13px;
         }
     }
 
@@ -1385,7 +1392,7 @@
             margin-top: 0;
         }
         .video-lander-div.explore-section {
-            background-color: none;
+            background-color: transparent;
         }
         .c-hero:before,
         .m-hero-item:before {
@@ -1473,8 +1480,9 @@
                   <source media="(min-width:540px)" srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1UCvV">
                   <source media="(min-width:0)" srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1UCvV">
                   <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1UCvV" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1UCvV"
-                  alt="Hero background"></img>
+                  alt="Hero background">
             </picture> -->
+        <h2 class="section-header">hero image</h2>
     </section>
     <div data-grid="col-12 stack-2" class="m-multi-feature f-align-left">
         <div class="herotext-container">
@@ -1494,11 +1502,10 @@
             <div class="videoplyr c-carousel f-multi-slide" role="region" aria-label="watch Microsoft Relationship Sales solution demos">
                 <div class="videocontainer" itemscope="" itemtype="http://schema.org/ItemList">
                     <ul class="video-ul">
-                        <li id="newHorizontalItemImage1" data-f-theme="light" class="f-active" role="tabpanel" video-id="RE1W5Dk">
+                        <li id="newHorizontalItemImage1" data-f-theme="light" class="f-active" role="tabpanel">
 
                             <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1W5Dk?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe"
-                                id="custom_oneplayer_iframe_1" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
-                                title="Watch the Grow your business faster with Microsoft Relationship Sales video"></iframe>
+                                id="custom_oneplayer_iframe_1" allowfullscreen="true" style="width: 100%; height: 100%;" title="Watch the Grow your business faster with Microsoft Relationship Sales video"></iframe>
                             <!--<img src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whud?ver=93df" class="mscom-image dyn-img x-hidden-focus" alt="Build-relationship" width="35" height="34">-->
                             <div class="videocontainer-desc">
                                 <h2 class="c-heading-5 heading-uppercase">Grow Your Business Faster</h2>
@@ -1507,40 +1514,36 @@
                             </div>
 
                         </li>
-                        <li id="newHorizontalItemImage2" data-f-theme="light" role="tabpanel" video-id="RE1VVbF">
+                        <li id="newHorizontalItemImage2" data-f-theme="light" role="tabpanel">
                             <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1VVbF?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe"
-                                id="custom_oneplayer_iframe_2" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
-                                title="Watch the Stay Focused with Microsoft Relationship Sales video" shorttitle="" desc=""></iframe>
+                                id="custom_oneplayer_iframe_2" allowfullscreen="true" style="width: 100%; height: 100%;" title="Watch the Stay Focused with Microsoft Relationship Sales video"></iframe>
                             <div class="videocontainer-desc">
                                 <h2 class="c-heading-5 heading-uppercase">Stay Focused</h2>
                                 <p class="c-paragraph-3">Predict customer needs and provide the right solution at the right time.
                                 </p>
                             </div>
                         </li>
-                        <li id="newHorizontalItemImage3" data-f-theme="dark" role="tabpanel" video-id="RE1Wds7">
+                        <li id="newHorizontalItemImage3" data-f-theme="dark" role="tabpanel">
                             <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1Wds7?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe"
-                                id="custom_oneplayer_iframe_3" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
-                                title="Watch the Identify leads using LinkedIn with Microsoft Relationship Sales video"></iframe>
+                                id="custom_oneplayer_iframe_3" allowfullscreen="true" style="width: 100%; height: 100%;" title="Watch the Identify leads using LinkedIn with Microsoft Relationship Sales video"></iframe>
                             <div class="videocontainer-desc">
                                 <h2 class="c-heading-5 heading-uppercase">Identify Leads Using LinkedIn</h2>
                                 <p class="c-paragraph-3">Identify and focus on leads who are most likely to turn into a sale.
                                 </p>
                             </div>
                         </li>
-                        <li id="newHorizontalItemImage4" data-f-theme="dark" role="tabpanel" video-id="RE1W5Dl">
+                        <li id="newHorizontalItemImage4" data-f-theme="dark" role="tabpanel">
                             <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1W5Dl?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe"
-                                id="custom_oneplayer_iframe_4" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
-                                title="Watch the Use real-time data to close deals with Microsoft Relationship Sales video"></iframe>
+                                id="custom_oneplayer_iframe_4" allowfullscreen="true" style="width: 100%; height: 100%;" title="Watch the Use real-time data to close deals with Microsoft Relationship Sales video"></iframe>
                             <div class="videocontainer-desc">
                                 <h2 class="c-heading-5 heading-uppercase">Use Real-Time Data to Close Deals</h2>
                                 <p class="c-paragraph-3">Gain insights, understand customer needs, and close deals more efficiently.
                                 </p>
                             </div>
                         </li>
-                        <li id="newHorizontalItemImage5" data-f-theme="dark" role="tabpanel" video-id="RE1VVbE">
+                        <li id="newHorizontalItemImage5" data-f-theme="dark" role="tabpanel">
                             <iframe src="https://www.microsoft.com/en-us/videoplayer/embed/RE1VVbE?autoplay=false" tabindex="-1" class="custom-oneplayer-iframe"
-                                id="custom_oneplayer_iframe_5" allowfullscreen="true" frameborder="0" scrolling="no" style="width: 100%; height: 100%;"
-                                title="Watch the Intelligent onboarding with Microsoft Relationship Sales video"></iframe>
+                                id="custom_oneplayer_iframe_5" allowfullscreen="true" style="width: 100%; height: 100%;" title="Watch the Intelligent onboarding with Microsoft Relationship Sales video"></iframe>
                             <div class="videocontainer-desc">
                                 <h2 class="c-heading-5 heading-uppercase">Intelligent Onboarding</h2>
                                 <p class="c-paragraph-3">Streamline seller onboarding with real-time suggestions and contextual help.
@@ -1696,52 +1699,52 @@
                 <h2 class="c-pragraph thumbnail-header">Video Demos</h2>
                 <ul role="tablist" class="video-thumbnail-ul">
                     <li id="img1" class="c-glyph active-border" role="presentation">
-                        <a href="#" id="grow-business" role="tab" class="mscom-link c-logo f-active" itemprop="url" aria-label="Watch the Grow your business faster with Microsoft Relationship Sales video"
+                        <a href="javacsript:void(0)" id="grow-business" role="tab" class="mscom-link c-logo f-active" aria-label="Watch the Grow your business faster with Microsoft Relationship Sales video"
                             aria-controls="newHorizontalItemContent1 newHorizontalItemImage1">
                             <div class="arrow-border_on"></div>
 
                             <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whud?ver=93df" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whud?ver=93df"
-                                alt="business processes and gain insights"></img>
+                                alt="business processes and gain insights">
                         </a>
                         <span class="bold-font">
                             <!--GROW BUSINESS-->GROW YOUR BUSINESS FASTER</span>
                     </li>
                     <li id="img2" class="c-glyph inactive-border" role="presentation">
-                        <a href="#" id="stay-focus" role="tab" class="mscom-link c-logo" itemprop="url" aria-label="Watch the Stay Focused with Microsoft Relationship Sales video"
+                        <a href="javacsript:void(0)" id="stay-focus" role="tab" class="mscom-link c-logo" aria-label="Watch the Stay Focused with Microsoft Relationship Sales video"
                             aria-controls="newHorizontalItemContent2 newHorizontalItemImage2">
                             <div class="arrow-border_off"></div>
                             <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whuj?ver=dfee" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Whuj?ver=dfee"
-                                alt="Predict customer needs"></img>
+                                alt="Predict customer needs">
 
                         </a>
                         <span class="normal-font">STAY FOCUSED</span>
                     </li>
                     <li id="img3" class="c-glyph inactive-border" role="presentation">
-                        <a href="#" id="linkedin" role="tab" class="mscom-link c-logo" itemprop="url" aria-label="Watch the Identify leads using LinkedIn with Microsoft Relationship Sales video"
+                        <a href="javacsript:void(0)" id="linkedin" role="tab" class="mscom-link c-logo" aria-label="Watch the Identify leads using LinkedIn with Microsoft Relationship Sales video"
                             aria-controls="newHorizontalItemContent3 newHorizontalItemImage3">
                             <div class="arrow-border_off"></div>
 
                             <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1WyeG?ver=7464" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1WyeG?ver=7464"
-                                alt="Identify and focus on leads"></img>
+                                alt="Identify and focus on leads">
                         </a>
                         <span class="normal-font heading-uppercase">
                             <!--WIN FASTER-->IDENTIFY LEADS USING LINKEDIN</span>
                     </li>
                     <li id="img4" class="c-glyph inactive-border" role="presentation">
-                        <a href="#" id="real-time" role="tab" class="mscom-link c-logo" itemprop="url" aria-label="Watch the Use real-time data to close deals with Microsoft Relationship Sales video"
+                        <a href="javacsript:void(0)" id="real-time" role="tab" class="mscom-link c-logo" aria-label="Watch the Use real-time data to close deals with Microsoft Relationship Sales video"
                             aria-controls="newHorizontalItemContent4 newHorizontalItemImage4">
                             <div class="arrow-border_off"></div>
                             <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1XB9G?ver=6de6" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1XB9G?ver=6de6"
-                                alt="Gain insights, understand customer needs"></img>
+                                alt="Gain insights, understand customer needs">
                         </a>
                         <span class="normal-font">USE REAL-TIME DATA TO CLOSE DEALS</span>
                     </li>
                     <li id="img5" class="c-glyph inactive-border" role="presentation">
-                        <a href="#" id="gartner" role="tab" class="mscom-link c-logo" itemprop="url" aria-label="Watch the Intelligent onboarding with Microsoft Relationship Sales video"
+                        <a href="javacsript:void(0)" id="gartner" role="tab" class="mscom-link c-logo" aria-label="Watch the Intelligent onboarding with Microsoft Relationship Sales video"
                             aria-controls="newHorizontalItemContent5 newHorizontalItemImage5">
                             <div class="arrow-border_off"></div>
                             <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1XArE?ver=3283" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1XArE?ver=3283"
-                                alt="seller onboarding with real-time suggestions"></img>
+                                alt="seller onboarding with real-time suggestions">
                         </a>
                         <span class="normal-font">INTELLIGENT ONBOARDING</span>
                     </li>
@@ -1824,11 +1827,13 @@
     </div>
 </div>
 <section data-grid="container">
+    <h2 class="section-header">no heading</h2>
     <hr class="c-divider mob-custom-divider">
 </section>
 
 <div class="foot-note-div theme-light">
     <section data-grid="container" class="footnote-container">
+        <h2 class="section-header">footnote container</h2>
         <p id="footnote" class="c-paragraph-4 italic-foot-note">
             <a href="#ret-footnote" class="supLink anchor_underline" aria-label="Return to referrer Footnote">
                 <span class="supFn">*</span>
