--- a/Dyn365-MobileAccessibility/D365-UHF-Header_new.html
+++ b/Dyn365-MobileAccessibility/D365-UHF-Header_new.html
@@ -65,7 +65,7 @@
 </style>
 
 <!--<a class="m-skip-to-main" href="#mainContent" tabindex="0">Skip to main content</a>-->
-<section id="headerArea" class="new-uhf-header" data-m="{&quot;cN&quot;:&quot;headerArea&quot;,&quot;cT&quot;:&quot;Area_coreuiArea&quot;,&quot;id&quot;:&quot;a1Body&quot;,&quot;sN&quot;:1,&quot;aN&quot;:&quot;Body&quot;}">
+<div id="headerArea" class="new-uhf-header" data-m="{&quot;cN&quot;:&quot;headerArea&quot;,&quot;cT&quot;:&quot;Area_coreuiArea&quot;,&quot;id&quot;:&quot;a1Body&quot;,&quot;sN&quot;:1,&quot;aN&quot;:&quot;Body&quot;}">
     <div id="headerRegion" data-region-key="headerregion" data-m="{&quot;cN&quot;:&quot;headerRegion&quot;,&quot;cT&quot;:&quot;Region_coreui-region&quot;,&quot;id&quot;:&quot;r1a1&quot;,&quot;sN&quot;:1,&quot;aN&quot;:&quot;a1&quot;}">
         <div id="headerUniversalHeader" data-m="{&quot;cN&quot;:&quot;headerUniversalHeader&quot;,&quot;cT&quot;:&quot;Module_coreui-universalheader&quot;,&quot;id&quot;:&quot;m1r1a1&quot;,&quot;sN&quot;:1,&quot;aN&quot;:&quot;r1a1&quot;}"
             data-module-id="Category|headerRegion|headerRegion|headerUniversalHeader|coreui-universalheader">
@@ -783,7 +783,7 @@
             </header>
         </div>
     </div>
-</section>
+</div>
 
 <!--<script>
     
