added couple new js files for troubleshooting but fix is in sqlnewcomponents

--- a/MediaCarouselBug346227/SQL_MediaCarouselWithFrames_1_M.html
+++ b/MediaCarouselBug346227/SQL_MediaCarouselWithFrames_1_M.html
@@ -32,7 +32,7 @@
                                 <div class="carousel-content">{{{1:carousel_content}}}
                                     <mscom:link href="{{1:external-link}}" md:payloadguid="{{1:internal-link}}" target="{{1:target-window}}" controltheme="default"
                                         disablebitracking="false" classoverride="{{1:open-popup-video}} fw-6 c-action-trigger c-call-to-action styles-for-cta c-glyph"
-                                        htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}','data-video-url':'{{1-data-video-url}}','ms.ea_action':'{{1-ms.ea-action}}','ms.ea_offer':'{{1-ms.ea-offer}}','atlas':'{{1:atlas}}','aria-hidden':'true', 'role':'presentation', 'tabindex':'-1'}">{{1-text-forbutton}}</mscom:link>
+                                        htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}','data-video-url':'{{1-data-video-url}}','ms.ea_action':'{{1-ms.ea-action}}','ms.ea_offer':'{{1-ms.ea-offer}}','atlas':'{{1:atlas}}','aria-hidden':'true', 'role':'presentation', 'tabindex':'-1','data-trial':'true'}">{{1-text-forbutton}}</mscom:link>
                                 </div>
                                 <div class="video-link relative {{1-playicon-color}}">
                                     <mscom:link href="JavaScript:void(0)" id="{{1-video-id}}" classoverride="{{1:open-popup-video}}" htmlcustomattributes="{'data-player-type':'{{1-data-player-type}}', 'data-video-url':'{{1-data-video-url}}','WCS.CN':'{{1-WCS.CN}}','aria-hidden':'false','aria-label':'{{1:aria-tag}}'}"></mscom:link>
