--- a/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
@@ -11,50 +11,50 @@
                 </mscom:conditional>
             </div>
             <!-- Image Tab navigation -->
-            <div class="livearea livearea-thumbnail" aria-label="Carousel of companies using Windows and Azure to realize their potential">
+            <div id="tabImageCarousel" class="livearea livearea-thumbnail" aria-label="Carousel of companies using Windows and Azure to realize their potential">
                 <div class="carousel-thumbnails">
                     <!-- previous arrow - hidden by default -->
                     <button class="carousel-left carousel-nav" role="presentation" aria-hidden="true">
                         <img alt="{{left-arrow-image-alt-text}}" src="{{left-arrow-image}}">
                     </button>
                     <div class="carousel-thumbnail-list" role="tablist">
-                        <button id="tabcarousel-1" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-1"
-                            data-index="1" data-show="{{1:show-element}}" data-item-class="{{1:background-color}} {{1:background-theme}}" data-bkgimg-src="{{1:background-image-2000x500}}"
+                        <button id="tabcarousel-1" class="carousel-thumbnail-item" tabindex="0" role="tab" aria-selected="false" aria-controls="carousel-content-item-1"
+                            data-index="0" data-active="0" data-show="{{1:show-element}}" data-item-class="{{1:background-color}} {{1:background-theme}}" data-bkgimg-src="{{1:background-image-2000x500}}"
                             data-bkgimg-alt="{{1:background-alt-text}}" data-body-logo="{{1:logo-image-300x100}}" data-body-h3="{{1:headline}}" data-body="{{1:body}}"
                             data-cta-href="{{1:link}}" data-cta-target="{{1:link-target}}" data-cta-atlas="{{1:link-atlas}}" data-cta-ariaLabel="{{1:aria-label}}"
                             data-cta-span="{{1:link-text}">
                             <img alt="{{1:thumbnail-alt-text}}" src="{{1:thumbnail-image-180x60}}">
                         </button>
                         <button id="tabcarousel-2" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-2"
-                            data-index="2" data-show="{{2:show-element}}" data-item-class="{{2:background-color}} {{2:background-theme}}" data-bkgimg-src="{{2:background-image-2000x500}}"
+                            data-index="1" data-show="{{2:show-element}}" data-item-class="{{2:background-color}} {{2:background-theme}}" data-bkgimg-src="{{2:background-image-2000x500}}"
                             data-bkgimg-alt="{{2:background-alt-text}}" data-body-logo="{{2:logo-image-300x100}}" data-body-h3="{{2:headline}}" data-body="{{2:body}}"
                             data-cta-href="{{2:link}}" data-cta-target="{{2:link-target}}" data-cta-atlas="{{2:link-atlas}}" data-cta-ariaLabel="{{2:aria-label}}"
                             data-cta-span="{{2:link-text}">
                             <img alt="{{2:thumbnail-alt-text}}" src="{{2:thumbnail-image-180x60}}">
                         </button>
                         <button id="tabcarousel-3" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-3"
-                            data-index="3" data-show="{{3:show-element}}" data-item-class="{{3:background-color}} {{3:background-theme}}" data-bkgimg-src="{{3:background-image-2000x500}}"
+                            data-index="2" data-show="{{3:show-element}}" data-item-class="{{3:background-color}} {{3:background-theme}}" data-bkgimg-src="{{3:background-image-2000x500}}"
                             data-bkgimg-alt="{{3:background-alt-text}}" data-body-logo="{{3:logo-image-300x100}}" data-body-h3="{{3:headline}}" data-body="{{3:body}}"
                             data-cta-href="{{3:link}}" data-cta-target="{{3:link-target}}" data-cta-atlas="{{3:link-atlas}}" data-cta-ariaLabel="{{3:aria-label}}"
                             data-cta-span="{{3:link-text}">
                             <img alt="{{3:thumbnail-alt-text}}" src="{{3:thumbnail-image-180x60}}">
                         </button>
                         <button id="tabcarousel-4" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-4"
-                            data-index="4" data-show="{{4:show-element}}" data-item-class="{{4:background-color}} {{4:background-theme}}" data-bkgimg-src="{{4:background-image-2000x500}}"
+                            data-index="3" data-show="{{4:show-element}}" data-item-class="{{4:background-color}} {{4:background-theme}}" data-bkgimg-src="{{4:background-image-2000x500}}"
                             data-bkgimg-alt="{{4:background-alt-text}}" data-body-logo="{{1:logo-image-300x100}}" data-body-h3="{{1:headline}}" data-body="{{4:body}}"
                             data-cta-href="{{4:link}}" data-cta-target="{{4:link-target}}" data-cta-atlas="{{4:link-atlas}}" data-cta-ariaLabel="{{4:aria-label}}"
                             data-cta-span="{{4:link-text}">
                             <img alt="{{4:thumbnail-alt-text}}" src="{{4:thumbnail-image-180x60}}">
                         </button>
                         <button id="tabcarousel-5" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-5"
-                            data-index="5" data-show="{{5:show-element}}" data-item-class="{{5:background-color}} {{5:background-theme}}" data-bkgimg-src="{{5:background-image-2000x500}}"
+                            data-index="4" data-show="{{5:show-element}}" data-item-class="{{5:background-color}} {{5:background-theme}}" data-bkgimg-src="{{5:background-image-2000x500}}"
                             data-bkgimg-alt="{{5:background-alt-text}}" data-body-logo="{{5:logo-image-300x100}}" data-body-h3="{{5:headline}}" data-body="{{5:body}}"
                             data-cta-href="{{5:link}}" data-cta-target="{{5:link-target}}" data-cta-atlas="{{5:link-atlas}}" data-cta-ariaLabel="{{5:aria-label}}"
                             data-cta-span="{{5:link-text}">
                             <img alt="{{5:thumbnail-alt-text}}" src="{{5:thumbnail-image-180x60}}">
                         </button>
                         <button id="tabcarousel-6" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-6"
-                            data-index="6" data-show="{{6:show-element}}" data-item-class="{{6:background-color}} {{6:background-theme}}" data-bkgimg-src="{{6:background-image-2000x500}}"
+                            data-index="5" data-show="{{6:show-element}}" data-item-class="{{6:background-color}} {{6:background-theme}}" data-bkgimg-src="{{6:background-image-2000x500}}"
                             data-bkgimg-alt="{{6:background-alt-text}}" data-body-logo="{{6:logo-image-300x100}}" data-body-h3="{{6:headline}}" data-body="{{6:body}}"
                             data-cta-href="{{6:link}}" data-cta-target="{{6:link-target}}" data-cta-atlas="{{6:link-atlas}}" data-cta-ariaLabel="{{6:aria-label}}"
                             data-cta-span="{{6:link-text}">
