sticky nav working

--- a/snippets/accessibility.html
+++ b/snippets/accessibility.html
@@ -11,7 +11,10 @@
 <h2>Aria</h2>
 role="alert" aria-live="assertive"
 <ul>
-    <li>aria-live="assertive" - the Screen Reader should read all changes to the element</li>
+    <li>aria-live="assertive - polite - off" - the Screen Reader should read all changes to the element</li>
+        <ul>
+            <li>Looking like it is best to seperate the info you need to be read (expand / collapse) into a seperate div. https://accessibility.huit.harvard.edu/provide-notification-dynamic-changes-content</li>
+        </ul>
     <li></li>
     <li></li>
     <li></li>
@@ -21,6 +24,7 @@ role="alert" aria-live="assertive"
 <h2>Role</h2>
 <ul>
     <li>role="alert" - this is more aggressive version of aria-live</li>
+
     <li>role="presentation" - tells screen reader it should be skipped as it is only for astitics.</li>
     <li></li>
     <li></li>
