--- a/2018-06-27_SpotCheckBug_349936/SQL_StickyNav_1_M.html
+++ b/2018-06-27_SpotCheckBug_349936/SQL_StickyNav_1_M.html
@@ -8,9 +8,8 @@
                 <div class="livearea tabs" data-tab-number="{{tab-number}}">
                     <div class="tab main-tab">
                         <!-- in mobile this is one item and looks sort of like an accordian aria-label="quick links navigation"  -->
-                        <button id="stickyMobilePageLink" class="tab-menu" tabindex="0" role="alert" aria-live="assertive" aria-expanded="false" aria-haspopup="true"
-                            aria-controls="quicklinks" aria-owns="quicklinks" style="background-color : transparent;">
-                            <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav1">
+                        <button id="stickyMobilePageLink" class="tab-menu" tabindex="0" aria-live="assertive" aria-expanded="false" aria-haspopup="true" aria-controls="quicklinks" aria-owns="" style="background-color : transparent;">
+                           <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav1">
                                 {{1:tab-name}}
                             </mscom:conditional>
                             <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav2">
@@ -31,9 +30,9 @@
                             <mscom:conditional propertyexists="true" property="PageProperties.ActiveStickyNav7">
                                 {{7:tab-name}}
                             </mscom:conditional>
-                            <span class="visually-hidden" aria-live="assertive">navigation collapsed</span>
+                            <!--<span class="visually-hidden" aria-live="assertive">navigation collapsed</span>-->
                         </button>
-                    </div>
+                        <div id="stickyNotice" aria-live="assertive"></div>
                     <nav id="quicklinks" aria-label="{{aria-label-info}}" aria-hidden="false">
                         <ul>
                             <li class="tab">
